--- a/assets/tareas.json
+++ b/assets/tareas.json
@@ -2,14 +2,14 @@
  {
   "id": 2,
   "titulo": "Objeto literal Vs JSON",
-  "descripcion": "",
+  "descripcion": "Diferencia de como se escriben",
   "estado": "Terminada"
  },
  {
   "id": 3,
   "titulo": "Comprar PC nueva",
-  "descripcion": "",
-  "estado": "vivis en Argentina, recordas?"
+  "descripcion": "Compu para trabajar",
+  "estado": "Pendiente"
  },
  {
   "id": 4,
