--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "argv": "0.0.2",
+    "chalk": "^4.1.0",
     "yargs": "^15.3.1"
   },
   "repository": {
