pequeño agregado de color

--- a/assets/tareas.json
+++ b/assets/tareas.json
@@ -15,7 +15,7 @@
   "id": 4,
   "titulo": "Cases",
   "descripcion": "Modularizar todos los Case del switch",
-  "estado": "Pendiente"
+  "estado": "Terminada"
  },
  {
   "id": 5,
